# winnow

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: detections.json  features.json  metrics.csv  residual.json  rrd  video_features.json  video_h264
docs/: demo.md  detection.md
train/: modal_act.py
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  wrangler.jsonc
ui/public/: data.json  querylog.json
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: Adjudication.tsx  AdjudicationSection.tsx  ApiNotes.tsx  DefectsSection.tsx  EpisodeDetail.tsx  EpisodeGrid.tsx  EvidencePhoto.tsx  ExportSection.tsx  FindingHead.tsx  Masthead.tsx  QueryBuilder.tsx  QuerySection.tsx  ScatterSection.tsx  SectionHeader.tsx  TimingSection.tsx
ui/src/components/charts/: DistributionRow.tsx  DriftBar.tsx  GapHistogram.tsx  Scatter.tsx  SeriesPanel.tsx  Sparkline.tsx
ui/src/components/query/: Code.tsx  GapStrip.tsx  ResultTable.tsx
ui/src/lib/: metrics.ts  query.ts  stats.ts  useData.ts
winnow/: align.py  blueprint.py  bundle.py  catalog.py  detect.py  export.py  features.py  ingest.py  paths.py  querylog.py  residual.py  transcode.py  vision.py  webdata.py
